[project]
name = "browser-engineering"
version = "0.1.0"
description = "A lightweight browser implementation in Python"
requires-python = ">=3.8"
dependencies = [
    "pywebview>=5.3",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
include = ["src/*.py"]
